// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`autolink.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
<https://www.example.com>

<hello@example.com>

<mailto:hello@example.com>

=====================================output=====================================
<https://www.example.com>

<hello@example.com>

<mailto:hello@example.com>

================================================================================
`;

exports[`empty-url.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[link](<> "title")

[link](<>)

[link]()

---

![link](<> "title")

![link](<>)

![link]()

---

[link]: <> "title"

[link]: <>

=====================================output=====================================
[link](<> "title")

[link](<>)

[link](<>)

---

![link](<> "title")

![link](<>)

![link](<>)

---

[link]: <> "title"
[link]: <>

================================================================================
`;

exports[`encodedLink.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[link](https://www.google.fr/()foo->bar)
[link](https://www.google.fr/foo->bar)
[link](https://www.google.fr/foo-%3Ebar)
[link](https://www.google.fr/foo-<bar)
[link](https://www.google.fr/foo-%3Cbar)
[link](\\<)
[link](\\()
[link](\\\\)
[link](<	>)

![link](https://www.google.fr/()foo->bar)
![link](https://www.google.fr/foo->bar)
![link](https://www.google.fr/foo-%3Ebar)
![link](https://www.google.fr/foo-<bar)
![link](https://www.google.fr/foo-%3Cbar)
![link](\\<)
![link](\\()
![link](\\\\)
![link](<	>)

[link]: https://www.google.fr/()foo->bar
[link]: https://www.google.fr/foo->bar
[link]: https://www.google.fr/foo-%3Ebar
[link]: https://www.google.fr/foo-<bar
[link]: https://www.google.fr/foo-%3Cbar
[link]: \\<
[link]: \\(
[link]: \\\\
[link]: <	>

=====================================output=====================================
[link](<https://www.google.fr/()foo-\\>bar>)
[link](https://www.google.fr/foo->bar) [link](https://www.google.fr/foo-%3Ebar)
[link](https://www.google.fr/foo-<bar) [link](https://www.google.fr/foo-%3Cbar)
[link](<\\<>) [link](<(>) [link](\\\\) [link](<	>)

![link](<https://www.google.fr/()foo-\\>bar>)
![link](https://www.google.fr/foo->bar)
![link](https://www.google.fr/foo-%3Ebar)
![link](https://www.google.fr/foo-<bar)
![link](https://www.google.fr/foo-%3Cbar) ![link](<\\<>) ![link](<(>) ![link](\\\\)
![link](<	>)

[link]: https://www.google.fr/()foo->bar
[link]: https://www.google.fr/foo->bar
[link]: https://www.google.fr/foo-%3Ebar
[link]: https://www.google.fr/foo-<bar
[link]: https://www.google.fr/foo-%3Cbar
[link]: <\\<>
[link]: <(>
[link]: \\\\
[link]: <	>

================================================================================
`;

exports[`entity.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[Test](http://localhost:8080/test?language=DE&currency=EUR)

[escaped named reference](/a?x&quot\\;b)

[escaped decimal reference](/a?x&#34\\;b)

[escaped hex reference](/a?x&#x22\\;b)

![escaped reference in an image](/a?x&quot\\;b)

[escaped reference in a title](/a "x&quot\\;b")

[escaped reference in a destination with a space](</a b?x&quot\\;c>)

[escaped reference in a definition]: /a?x&quot\\;b

[escaped ampersand](/a?x\\&amp;b)

[escaped ampersand in a title](/a "x\\&amp;b")

[unescaped named reference](/a?x&amp;b)

=====================================output=====================================
[Test](http://localhost:8080/test?language=DE&currency=EUR)

[escaped named reference](/a?x\\&quot;b)

[escaped decimal reference](/a?x\\&#34;b)

[escaped hex reference](/a?x\\&#x22;b)

![escaped reference in an image](/a?x\\&quot;b)

[escaped reference in a title](/a "x\\&quot;b")

[escaped reference in a destination with a space](</a b?x\\&quot;c>)

[escaped reference in a definition]: /a?x\\&quot;b

[escaped ampersand](/a?x\\&amp;b)

[escaped ampersand in a title](/a "x\\&amp;b")

[unescaped named reference](/a?x&b)

================================================================================
`;

exports[`long.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)

=====================================output=====================================
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[hello](#world)

=====================================output=====================================
[hello](#world)

================================================================================
`;

exports[`url.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
https://www.example.com/

=====================================output=====================================
https://www.example.com/

================================================================================
`;
